--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,8 @@ jobs:
         KEY: ${{ secrets[format('EC2_SSH_KEY_{0}', matrix.instance)] }}
         ENV_FILE: ${{ secrets[format('ENV_FILE_{0}', matrix.instance)] }}
         DOMAIN_BASE: tumaquinaya.com
+        # Agregar email para Let's Encrypt (debe ser un secreto)
+        LETSENCRYPT_EMAIL: ${{ secrets.LETSENCRYPT_EMAIL }}
       run: |
         echo "🚀 Iniciando despliegue en la instancia ${{ matrix.instance }}..."
         
@@ -65,11 +67,13 @@ jobs:
         SUBDOMAIN="${1}"
         DOMAIN_BASE="${2}"
         INSTANCE_NUM="${3}"
+        LETSENCRYPT_EMAIL="${4}"
 
         echo "🔧 Configuración recibida:"
         echo "   - Subdominio: ${SUBDOMAIN}"
         echo "   - Dominio base: ${DOMAIN_BASE}"
         echo "   - Instancia: ${INSTANCE_NUM}"
+        echo "   - Email para SSL: ${LETSENCRYPT_EMAIL}"
 
         # Determinar ruta del proyecto
         if [ -d "/home/ubuntu/Web-server-UDP" ]; then
@@ -152,9 +156,9 @@ jobs:
           pm2 startup systemd -u $USER --hp /home/$USER
         fi
 
-        # Python y Nginx
+        # Python, Nginx y Certbot
         sudo apt-get update -qq
-        sudo apt-get install -y python3-pip python3-venv nginx
+        sudo apt-get install -y python3-pip python3-venv nginx certbot python3-certbot-nginx
 
         # Configurar entorno virtual de Python
         echo "🐍 Configurando entorno Python..."
@@ -171,15 +175,17 @@ jobs:
           pip install -r requirements.txt
         fi
 
-        # Configurar Nginx con subdominios
-        echo "🌐 Configurando Nginx..."
-        cat > /tmp/nginx-config << NGINXCONF
+        # Configurar Nginx PRIMERO sin SSL (necesario para validación de Let's Encrypt)
+        echo "🌐 Configurando Nginx (paso 1: HTTP temporal para validación SSL)..."
+        cat > /tmp/nginx-config-temp << NGINXTEMPCONF
         server {
             listen 80;
-            server_name ${FULL_DOMAIN};
+            server_name ${FULL_DOMAIN} www.${FULL_DOMAIN};
             
-            access_log /var/log/nginx/${SUBDOMAIN}_access.log;
-            error_log /var/log/nginx/${SUBDOMAIN}_error.log;
+            # Location para validación de Let's Encrypt
+            location /.well-known/acme-challenge/ {
+                root /var/www/certbot;
+            }
             
             location / {
                 proxy_pass http://localhost:5000;
@@ -192,37 +198,141 @@ jobs:
                 proxy_read_timeout 60s;
                 proxy_buffering off;
             }
+        }
+        NGINXTEMPCONF
+
+        # Crear directorio para validación de Let's Encrypt
+        sudo mkdir -p /var/www/certbot
+
+        sudo mv /tmp/nginx-config-temp /etc/nginx/sites-available/location-tracker
+        sudo ln -sf /etc/nginx/sites-available/location-tracker /etc/nginx/sites-enabled/
+        sudo rm -f /etc/nginx/sites-enabled/default
+
+        if sudo nginx -t; then
+          sudo systemctl reload nginx
+          echo "✅ Nginx configurado temporalmente para validación SSL"
+        else
+          echo "❌ Error en configuración de Nginx"
+          exit 1
+        fi
+
+        # Obtener certificado SSL con Let's Encrypt
+        echo "🔐 Obteniendo certificado SSL con Let's Encrypt..."
+        
+        # Verificar si ya existe un certificado válido
+        if sudo test -f "/etc/letsencrypt/live/${FULL_DOMAIN}/fullchain.pem"; then
+          echo "📜 Certificado SSL existente encontrado, intentando renovar si es necesario..."
+          sudo certbot renew --nginx --non-interactive --quiet || true
+        else
+          echo "🆕 Obteniendo nuevo certificado SSL..."
+          # Obtener certificado SSL (usa --staging para pruebas, quítalo en producción)
+          sudo certbot certonly \
+            --webroot \
+            -w /var/www/certbot \
+            --non-interactive \
+            --agree-tos \
+            --email ${LETSENCRYPT_EMAIL} \
+            -d ${FULL_DOMAIN} \
+            -d www.${FULL_DOMAIN} \
+            || echo "⚠️ No se pudo obtener certificado SSL, continuando con configuración HTTP"
+        fi
+
+        # Configurar Nginx con SSL y redirección HTTPS forzada
+        echo "🔒 Configurando Nginx con SSL y HTTPS forzado..."
+        
+        # Verificar si el certificado existe
+        if sudo test -f "/etc/letsencrypt/live/${FULL_DOMAIN}/fullchain.pem"; then
+          echo "✅ Certificado SSL encontrado, configurando HTTPS..."
+          
+          cat > /tmp/nginx-config-ssl << NGINXSSLCONF
+        # Redirección HTTP a HTTPS (FORZADO)
+        server {
+            listen 80;
+            server_name ${FULL_DOMAIN} www.${FULL_DOMAIN};
             
-            location /static {
-                alias ${PROJECT_PATH}/static;
-                expires 30d;
+            # Permitir renovación de certificados
+            location /.well-known/acme-challenge/ {
+                root /var/www/certbot;
+            }
+            
+            # Redireccionar TODO el tráfico HTTP a HTTPS
+            location / {
+                return 301 https://\$host\$request_uri;
             }
         }
 
+        # Configuración HTTPS principal
         server {
-            listen 80;
-            server_name www.${FULL_DOMAIN};
-            return 301 http://${FULL_DOMAIN}\$request_uri;
-        }
-
-        # Server block por defecto para compatibilidad
-        server {
-            listen 80 default_server;
-            server_name _;
+            listen 443 ssl http2;
+            server_name ${FULL_DOMAIN};
+            
+            # Certificados SSL
+            ssl_certificate /etc/letsencrypt/live/${FULL_DOMAIN}/fullchain.pem;
+            ssl_certificate_key /etc/letsencrypt/live/${FULL_DOMAIN}/privkey.pem;
+            
+            # Configuración SSL moderna y segura
+            ssl_protocols TLSv1.2 TLSv1.3;
+            ssl_ciphers HIGH:!aNULL:!MD5;
+            ssl_prefer_server_ciphers on;
+            
+            # Seguridad adicional
+            ssl_session_cache shared:SSL:10m;
+            ssl_session_timeout 10m;
+            ssl_stapling on;
+            ssl_stapling_verify on;
+            
+            # Headers de seguridad
+            add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+            add_header X-Frame-Options "SAMEORIGIN" always;
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header X-XSS-Protection "1; mode=block" always;
+            
+            access_log /var/log/nginx/${SUBDOMAIN}_ssl_access.log;
+            error_log /var/log/nginx/${SUBDOMAIN}_ssl_error.log;
             
             location / {
                 proxy_pass http://localhost:5000;
                 proxy_set_header Host \$host;
                 proxy_set_header X-Real-IP \$remote_addr;
                 proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-                proxy_set_header X-Forwarded-Proto \$scheme;
+                proxy_set_header X-Forwarded-Proto https;
+                proxy_set_header X-Forwarded-SSL on;
+                proxy_connect_timeout 60s;
+                proxy_send_timeout 60s;
+                proxy_read_timeout 60s;
+                proxy_buffering off;
+                
+                # Websocket support
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade \$http_upgrade;
+                proxy_set_header Connection "upgrade";
+            }
+            
+            location /static {
+                alias ${PROJECT_PATH}/static;
+                expires 30d;
+                add_header Cache-Control "public, immutable";
             }
         }
-        NGINXCONF
 
-        sudo mv /tmp/nginx-config /etc/nginx/sites-available/location-tracker
-        sudo ln -sf /etc/nginx/sites-available/location-tracker /etc/nginx/sites-enabled/
-        sudo rm -f /etc/nginx/sites-enabled/default
+        # Redirección de www a no-www con HTTPS
+        server {
+            listen 443 ssl http2;
+            server_name www.${FULL_DOMAIN};
+            
+            ssl_certificate /etc/letsencrypt/live/${FULL_DOMAIN}/fullchain.pem;
+            ssl_certificate_key /etc/letsencrypt/live/${FULL_DOMAIN}/privkey.pem;
+            
+            return 301 https://${FULL_DOMAIN}\$request_uri;
+        }
+        NGINXSSLCONF
+          
+          sudo mv /tmp/nginx-config-ssl /etc/nginx/sites-available/location-tracker
+          
+        else
+          echo "⚠️ No se encontró certificado SSL, manteniendo configuración HTTP con advertencia..."
+          echo "⚠️ ADVERTENCIA: La aplicación está corriendo en HTTP. Configure DNS y vuelva a ejecutar para SSL."
+        fi
 
         if sudo nginx -t; then
           sudo systemctl reload nginx
@@ -230,6 +340,28 @@ jobs:
         else
           echo "❌ Error en configuración de Nginx"
           exit 1
+        fi
+
+        # Configurar renovación automática de certificados SSL
+        echo "📅 Configurando renovación automática de certificados SSL..."
+        
+        # Crear script de renovación
+        cat > /tmp/renew-ssl.sh << 'RENEWSCRIPT'
+        #!/bin/bash
+        certbot renew --nginx --non-interactive --quiet
+        if [ $? -eq 0 ]; then
+          systemctl reload nginx
+        fi
+        RENEWSCRIPT
+        
+        sudo mv /tmp/renew-ssl.sh /etc/letsencrypt/renew-ssl.sh
+        sudo chmod +x /etc/letsencrypt/renew-ssl.sh
+        
+        # Agregar cron job para renovación automática (dos veces al día)
+        CRON_JOB="0 0,12 * * * root /etc/letsencrypt/renew-ssl.sh"
+        if ! sudo grep -q "/etc/letsencrypt/renew-ssl.sh" /etc/crontab; then
+          echo "$CRON_JOB" | sudo tee -a /etc/crontab > /dev/null
+          echo "✅ Cron job para renovación automática configurado"
         fi
 
         # Crear script de inicio si no existe o si hay cambios en el código
@@ -242,6 +374,8 @@ jobs:
         source venv/bin/activate
         export FLASK_APP=udp_flask_server.py
         export FLASK_ENV=production
+        # Configurar Flask para confiar en headers de proxy (importante para HTTPS)
+        export FLASK_TRUSTED_PROXIES="127.0.0.1"
         python udp_flask_server.py
         STARTSCRIPT
           chmod +x start_app.sh
@@ -340,24 +474,32 @@ jobs:
           fi
         done
 
-        # Test Nginx
-        if curl -s -f http://localhost/ > /dev/null 2>&1; then
-          echo "✅ Nginx respondiendo correctamente en puerto 80"
+        # Test HTTPS si el certificado existe
+        if sudo test -f "/etc/letsencrypt/live/${FULL_DOMAIN}/fullchain.pem"; then
+          echo "🔐 Verificando HTTPS..."
+          
+          # Test redirección HTTP a HTTPS
+          REDIRECT_TEST=$(curl -s -o /dev/null -w "%{http_code}" -L http://localhost/ 2>/dev/null || echo "000")
+          if [ "$REDIRECT_TEST" = "200" ]; then
+            echo "✅ Redirección HTTP → HTTPS funcionando"
+          else
+            echo "⚠️ Verificación de redirección devolvió código: $REDIRECT_TEST"
+          fi
+          
+          # Test HTTPS directo (si es posible)
+          if curl -s -f -k https://localhost/ > /dev/null 2>&1; then
+            echo "✅ HTTPS respondiendo correctamente"
+          else
+            echo "ℹ️ HTTPS configurado pero requiere dominio válido para prueba completa"
+          fi
         else
-          echo "⚠️ Nginx no responde"
-        fi
-
-        # Test con dominio
-        if curl -s -f -H "Host: ${FULL_DOMAIN}" http://localhost/ > /dev/null 2>&1; then
-          echo "✅ Sitio accesible via ${FULL_DOMAIN}"
-        else
-          echo "⚠️ Sitio no responde con dominio ${FULL_DOMAIN}"
+          echo "⚠️ SSL no configurado - acceso solo por HTTP"
         fi
 
         # Configurar firewall
         if command -v ufw &> /dev/null; then
           echo "🔒 Configurando firewall..."
-          sudo ufw allow 80/tcp comment "HTTP" 2>/dev/null || true
+          sudo ufw allow 80/tcp comment "HTTP (redirige a HTTPS)" 2>/dev/null || true
           sudo ufw allow 443/tcp comment "HTTPS" 2>/dev/null || true
           sudo ufw allow 5049/udp comment "UDP Listener" 2>/dev/null || true
           sudo ufw allow 22/tcp comment "SSH" 2>/dev/null || true
@@ -378,18 +520,43 @@ jobs:
         echo "   - Dominio: ${FULL_DOMAIN}"
         echo "   - Proyecto: ${PROJECT_PATH}"
         echo "   - Estado: $(pm2 list | grep ${APP_NAME} | awk '{print $10}')"
+        
+        if sudo test -f "/etc/letsencrypt/live/${FULL_DOMAIN}/fullchain.pem"; then
+          echo "   - SSL: ✅ Configurado (HTTPS forzado)"
+          echo ""
+          echo "🔐 CERTIFICADO SSL:"
+          sudo certbot certificates 2>/dev/null | grep -A 3 "${FULL_DOMAIN}" || true
+        else
+          echo "   - SSL: ⚠️ No configurado (solo HTTP)"
+        fi
+        
         echo ""
         echo "🔗 ACCESO:"
-        echo "   - http://${FULL_DOMAIN}"
+        if sudo test -f "/etc/letsencrypt/live/${FULL_DOMAIN}/fullchain.pem"; then
+          echo "   - https://${FULL_DOMAIN} (SEGURO)"
+          echo "   - http://${FULL_DOMAIN} → Redirige a HTTPS"
+        else
+          echo "   - http://${FULL_DOMAIN} (⚠️ Sin SSL)"
+          echo "   - Para habilitar HTTPS: Configure DNS y vuelva a ejecutar"
+        fi
         echo ""
-        echo "🛠️ COMANDOS:"
+        echo "🛠️ COMANDOS ÚTILES:"
         echo "   - Ver logs: pm2 logs ${APP_NAME}"
         echo "   - Reiniciar: pm2 restart ${APP_NAME}"
         echo "   - Recargar: pm2 reload ${APP_NAME}"
         echo "   - Monitorear: pm2 monit"
+        echo "   - Renovar SSL: sudo certbot renew --nginx"
+        echo "   - Ver certificados: sudo certbot certificates"
         echo ""
         echo "📊 Aplicaciones PM2 activas:"
         pm2 list
+        echo ""
+        echo "🔒 SEGURIDAD:"
+        echo "   - HTTPS: Forzado con redirección 301"
+        echo "   - HSTS: Habilitado (preload ready)"
+        echo "   - TLS: v1.2 y v1.3 únicamente"
+        echo "   - Headers de seguridad: Configurados"
+        echo "   - Renovación SSL: Automática (cron)"
         echo "========================================="
         DEPLOYEOF
         
@@ -411,11 +578,11 @@ jobs:
         # Transferir y ejecutar script
         scp -o StrictHostKeyChecking=no -i deploy_key deploy_remote.sh ${USER}@${HOST}:/tmp/deploy_remote.sh
         
-        echo "🚀 Ejecutando despliegue..."
+        echo "🚀 Ejecutando despliegue con SSL..."
         ssh -o StrictHostKeyChecking=no -i deploy_key ${USER}@${HOST} \
-          "chmod +x /tmp/deploy_remote.sh && /tmp/deploy_remote.sh '${NAME_VALUE}' '${DOMAIN_BASE}' '${{ matrix.instance }}' && rm /tmp/deploy_remote.sh"
+          "chmod +x /tmp/deploy_remote.sh && /tmp/deploy_remote.sh '${NAME_VALUE}' '${DOMAIN_BASE}' '${{ matrix.instance }}' '${LETSENCRYPT_EMAIL}' && rm /tmp/deploy_remote.sh"
         
         # Limpiar archivos temporales
         rm -f deploy_key temp_env_file deploy_remote.sh
         
-        echo "✅ Despliegue completado para instancia ${{ matrix.instance }}"
+        echo "✅ Despliegue con SSL/HTTPS completado para instancia ${{ matrix.instance }}"
